--- a/tests/spydust_paper/beta_comparisons.ipynb
+++ b/tests/spydust_paper/beta_comparisons.ipynb
@@ -4,30 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "l_a computed\n",
-      "readPAH computed\n",
-      "Loaded previously computed Jpeisrf arrays from file.\n",
-      "Tev table already exists at /Users/user/PythonProjects/SpyDust/SpyDust/Data_Files/Tev_30a_30chi.txt.\n",
-      "I(Zg<0, parabolic) stored\n",
-      "I(rot, e, Zg <> 0) stored\n",
-      "I(Zg<0, parabolic) stored\n",
-      "I(rot, e, Zg <> 0) stored\n",
-      "l_a computed\n",
-      "readPAH computed\n",
-      "Loaded previously computed Jpeisrf arrays from file.\n",
-      "Maximum energy in the Qabs_hnu_tab is 1239.84 eV.\n",
-      "FIR_integral_charged shape: (30, 30)\n",
-      "Na: 30, Nchi: 30\n",
-      "Tev table already exists at /Users/user/PythonProjects/SpyDust/SpyDust/Data_Files/Tev_30a_30chi.txt.\n",
-      "Gaunt factor stored\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -35,15 +12,100 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.gridspec import GridSpec\n",
     "\n",
-    "# Add the root directory of the package to sys.path\n",
-    "sys.path.append('/Users/user/PythonProjects/SpyDust/')\n",
-    "\n",
     "import SpyDust.Grain as spyGrain\n",
     "from SpyDust.util import cgsconst\n",
     "\n",
     "import SpyDust.SpyDust as SpyDust\n",
     "import SpyDust.SPDUST_as_is.spdust as spdust\n",
     "import SpyDust.SPDUST_as_is.grain_properties as spdust_grain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1, 15])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.arange(20)[[1,15]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/zzhang/Workspace/SpyDust/SpyDust/infrared.py:516: SyntaxWarning: invalid escape sequence '\\i'\n",
+      "  Computes the integrals \\int F_nu/nu^2 dnu and \\int F_nu/nu dnu.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l_a computed\n",
+      "readPAH computed\n",
+      "Loaded previously computed Jpeisrf arrays from file.\n",
+      "E_M = 13.60 eV is not high enough in 'distribution'. Using 40.80 eV instead\n",
+      "E_M = 13.60 eV is not high enough in 'distribution'. Using 40.80 eV instead\n",
+      "E_M = 13.60 eV is not high enough in 'distribution'. Using 40.80 eV instead\n",
+      "E_M = 13.60 eV is not high enough in 'distribution'. Using 40.80 eV instead\n",
+      "E_M = 13.60 eV is not high enough in 'distribution'. Using 40.80 eV instead\n",
+      "E_M = 13.60 eV is not high enough in 'distribution'. Using 40.80 eV instead\n",
+      "E_M = 13.60 eV is not high enough in 'distribution'. Using 40.80 eV instead\n",
+      "E_M = 13.60 eV is not high enough in 'distribution'. Using 40.80 eV instead\n",
+      "E_M = 40.80 eV is not high enough in 'distribution'. Using 122.40 eV instead\n",
+      "E_M = 40.80 eV is not high enough in 'distribution'. Using 122.40 eV instead\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/zzhang/Workspace/SpyDust/SpyDust/infrared.py:516: SyntaxWarning: invalid escape sequence '\\i'\n",
+      "  Computes the integrals \\int F_nu/nu^2 dnu and \\int F_nu/nu dnu.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mSpyDust\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01minfrared\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mSpyIR\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Workspace/SpyDust/SpyDust/__init__.py:12\u001b[39m\n\u001b[32m      8\u001b[39m SpDust_data_dir = os.path.join(__path__[\u001b[32m0\u001b[39m], \u001b[33m'\u001b[39m\u001b[33mData_Files/\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m#SpDust_data_dir = os.path.join(\"/home/phil/software/SpyDust/SpyDust\", 'Data_Files/')\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AngMomDist, charge_dist, collisions, free_free, Grain, \\\n\u001b[32m     13\u001b[39m               H2_photoemission, infrared, mpiutil, plasmadrag, SED, \\\n\u001b[32m     14\u001b[39m               SpyDust, util\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Workspace/SpyDust/SpyDust/AngMomDist.py:4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutil\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m cgsconst, makelogtab, DX_over_X\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mGrain\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m acx, Inertia_largest, grainparams\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01minfrared\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m FGIR_averaged\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcollisions\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Tev_effective, FGn_averaged, FGi_averaged\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mplasmadrag\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m FGp_averaged\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Workspace/SpyDust/SpyDust/infrared.py:728\u001b[39m\n\u001b[32m    716\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[32m    718\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    719\u001b[39m \u001b[33;03mdef precompile_njit_functions():\u001b[39;00m\n\u001b[32m    720\u001b[39m \u001b[33;03m    a=3e-7\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    725\u001b[39m \u001b[33;03mprecompile_njit_functions()\u001b[39;00m\n\u001b[32m    726\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m728\u001b[39m \u001b[43mcompute_FGIR_integrals\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    730\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mFGIR_integrals_interpol\u001b[39m(a, Z, Chi):\n\u001b[32m    731\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    732\u001b[39m \u001b[33;03m    Interpolates or extrapolates the FIR and GIR integrals for a given grain size `a`, charge `Z`, and ISRF scaling factor `Chi`.\u001b[39;00m\n\u001b[32m    733\u001b[39m \u001b[33;03m    Parameters:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    739\u001b[39m \u001b[33;03m    - A dictionary containing the interpolated/extrapolated FIR and GIR integrals.\u001b[39;00m\n\u001b[32m    740\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Workspace/SpyDust/SpyDust/infrared.py:673\u001b[39m, in \u001b[36mcompute_FGIR_integrals\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    671\u001b[39m start_time = time.time()\n\u001b[32m    672\u001b[39m \u001b[38;5;66;03m# Parallelize the loop\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m673\u001b[39m result = np.array(\u001b[43mparallel_map\u001b[49m\u001b[43m(\u001b[49m\u001b[43mloop\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43marange\u001b[49m\u001b[43m(\u001b[49m\u001b[43mNa\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m ) \u001b[38;5;66;03m# shape: (Na, Nchi, 4)\u001b[39;00m\n\u001b[32m    675\u001b[39m end_time = time.time()\n\u001b[32m    676\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m rank0:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Workspace/SpyDust/SpyDust/mpiutil.py:94\u001b[39m, in \u001b[36mparallel_map\u001b[39m\u001b[34m(func, glist, root, method, comm)\u001b[39m\n\u001b[32m     92\u001b[39m \u001b[38;5;66;03m# If we're only on a single node, then just perform without MPI\u001b[39;00m\n\u001b[32m     93\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m comm \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m comm.size == \u001b[32m1\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m94\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m [\u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mitem\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m item \u001b[38;5;129;01min\u001b[39;00m glist]\n\u001b[32m     96\u001b[39m \u001b[38;5;66;03m# Pair up each list item with its position.\u001b[39;00m\n\u001b[32m     97\u001b[39m zlist = \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28menumerate\u001b[39m(glist))\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Workspace/SpyDust/SpyDust/infrared.py:664\u001b[39m, in \u001b[36mcompute_FGIR_integrals.<locals>.loop\u001b[39m\u001b[34m(ia)\u001b[39m\n\u001b[32m    662\u001b[39m result[ichi, \u001b[32m1\u001b[39m] = FGIR_integral_charged[\u001b[33m'\u001b[39m\u001b[33mGIR_integral\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m    663\u001b[39m \u001b[38;5;66;03m# Compute integrals for neutral grains (Z = 0)\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m664\u001b[39m FGIR_integral_neutral, Energy_max, Mval = \u001b[43mFGIR_integrals\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mChi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[43mEnergy_modes_op\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mEnergy_modes_ip\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mEnergy_modes_CH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mMval\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mEnergy_max\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    665\u001b[39m result[ichi, \u001b[32m2\u001b[39m] = FGIR_integral_neutral[\u001b[33m'\u001b[39m\u001b[33mFIR_integral\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m    666\u001b[39m result[ichi, \u001b[32m3\u001b[39m] = FGIR_integral_neutral[\u001b[33m'\u001b[39m\u001b[33mGIR_integral\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Workspace/SpyDust/SpyDust/infrared.py:528\u001b[39m, in \u001b[36mFGIR_integrals\u001b[39m\u001b[34m(a, Z, Chi, Energy_modes_op, Energy_modes_ip, Energy_modes_CH, Mval, Energy_max)\u001b[39m\n\u001b[32m    515\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    516\u001b[39m \u001b[33;03mComputes the integrals \\int F_nu/nu^2 dnu and \\int F_nu/nu dnu.\u001b[39;00m\n\u001b[32m    517\u001b[39m \u001b[33;03mParameters:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    525\u001b[39m \u001b[33;03m- A dictionary containing the FIR and GIR integrals.\u001b[39;00m\n\u001b[32m    526\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    527\u001b[39m \u001b[38;5;66;03m# Compute the distribution\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m528\u001b[39m dist, Energy_max, Mval = \u001b[43mdistribution\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mZ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mChi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[43mEnergy_modes_op\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mEnergy_modes_ip\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mEnergy_modes_CH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mMval\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mEnergy_max\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    529\u001b[39m \u001b[38;5;66;03m# Update M and Energy_max based on the distribution function\u001b[39;00m\n\u001b[32m    530\u001b[39m lambda_max = \u001b[32m1e-1\u001b[39m  \u001b[38;5;66;03m# 0.1 cm\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Workspace/SpyDust/SpyDust/infrared.py:442\u001b[39m, in \u001b[36mdistribution\u001b[39m\u001b[34m(a, Z, Chi, Energy_modes_op, Energy_modes_ip, Energy_modes_CH, M, Energy_max)\u001b[39m\n\u001b[32m    440\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m X_tab[M] > \u001b[32m1e-14\u001b[39m:    \n\u001b[32m    441\u001b[39m     Energy_max *= \u001b[32m3\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m442\u001b[39m     aux1, M = \u001b[43mBtilde_ISRF_func\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mZ\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[43mEnergy_modes_op\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mEnergy_modes_ip\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mEnergy_modes_CH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mM\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mEnergy_max\u001b[49m\u001b[43m)\u001b[49m \n\u001b[32m    443\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m rank0:\n\u001b[32m    444\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mE_M = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mEnergy_max\u001b[38;5;250m \u001b[39m/\u001b[38;5;250m \u001b[39meV\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m eV is not high enough in \u001b[39m\u001b[33m'\u001b[39m\u001b[33mdistribution\u001b[39m\u001b[33m'\u001b[39m\u001b[33m. Using \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[32m3\u001b[39m\u001b[38;5;250m \u001b[39m*\u001b[38;5;250m \u001b[39mEnergy_max\u001b[38;5;250m \u001b[39m/\u001b[38;5;250m \u001b[39meV\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m eV instead\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Workspace/SpyDust/SpyDust/infrared.py:358\u001b[39m, in \u001b[36mBtilde_ISRF_func\u001b[39m\u001b[34m(a, Z, Energy_modes_op, Energy_modes_ip, Energy_modes_CH, M, Energy_max)\u001b[39m\n\u001b[32m    356\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(ind3[\u001b[32m0\u001b[39m]) > \u001b[32m0\u001b[39m:\n\u001b[32m    357\u001b[39m     GuL[ind3] = (W4 - E_array[ind3]) / (DeltaEu * DeltaEL)\n\u001b[32m--> \u001b[39m\u001b[32m358\u001b[39m u_arr = \u001b[43mnu_uisrf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mE_array\u001b[49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[43meV\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    359\u001b[39m Cabs = pi * a**\u001b[32m2\u001b[39m * Qabs(a, Z, E_array / eV)\n\u001b[32m    360\u001b[39m T_upward[u, L] = c * DeltaEu / (Eu - EL) * np.sum(GuL * Cabs * u_arr) * DE_over_E\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Workspace/SpyDust/SpyDust/charge_dist.py:247\u001b[39m, in \u001b[36mnu_uisrf\u001b[39m\u001b[34m(hnu_tab_aux)\u001b[39m\n\u001b[32m    245\u001b[39m \u001b[38;5;66;03m#ind3 = np.where((hnu_tab_aux < 9.26) & (hnu_tab_aux > 5.04))\u001b[39;00m\n\u001b[32m    246\u001b[39m ind3 = (hnu_tab_aux < \u001b[32m9.26\u001b[39m) & (hnu_tab_aux > \u001b[32m5.04\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m247\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43many\u001b[49m\u001b[43m(\u001b[49m\u001b[43mind3\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[32m    248\u001b[39m     uisrf_tab[ind3] = \u001b[32m2.055e-14\u001b[39m * hnu_tab_aux[ind3]**\u001b[32m0.6678\u001b[39m\n\u001b[32m    250\u001b[39m \u001b[38;5;66;03m#ind4 = np.where(hnu_tab_aux < 5.04)\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/opt/homebrew/Caskroom/miniconda/base/envs/SpyDust/lib/python3.13/site-packages/numpy/_core/fromnumeric.py:2472\u001b[39m, in \u001b[36m_any_dispatcher\u001b[39m\u001b[34m(a, axis, out, keepdims, where)\u001b[39m\n\u001b[32m   2464\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m res\n\u001b[32m   2466\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m _wrapreduction(\n\u001b[32m   2467\u001b[39m         a, np.add, \u001b[33m'\u001b[39m\u001b[33msum\u001b[39m\u001b[33m'\u001b[39m, axis, dtype, out,\n\u001b[32m   2468\u001b[39m         keepdims=keepdims, initial=initial, where=where\n\u001b[32m   2469\u001b[39m     )\n\u001b[32m-> \u001b[39m\u001b[32m2472\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_any_dispatcher\u001b[39m(a, axis=\u001b[38;5;28;01mNone\u001b[39;00m, out=\u001b[38;5;28;01mNone\u001b[39;00m, keepdims=\u001b[38;5;28;01mNone\u001b[39;00m, *,\n\u001b[32m   2473\u001b[39m                     where=np._NoValue):\n\u001b[32m   2474\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m (a, where, out)\n\u001b[32m   2477\u001b[39m \u001b[38;5;129m@array_function_dispatch\u001b[39m(_any_dispatcher)\n\u001b[32m   2478\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34many\u001b[39m(a, axis=\u001b[38;5;28;01mNone\u001b[39;00m, out=\u001b[38;5;28;01mNone\u001b[39;00m, keepdims=np._NoValue, *, where=np._NoValue):\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
+   "source": [
+    "import SpyDust.infrared as SpyIR\n"
    ]
   },
   {
@@ -317,7 +379,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TOD",
+   "display_name": "SpyDust",
    "language": "python",
    "name": "python3"
   },
@@ -331,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
