--- a/tests/benchmark_infrared.ipynb
+++ b/tests/benchmark_infrared.ipynb
@@ -2,9 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l_a computed\n",
+      "readPAH computed\n",
+      "Loaded previously computed Jpeisrf arrays from file.\n",
+      "Tev table already exists at /Users/zzhang/Workspace/SpyDust/SpyDust/Data_Files/Tev_30a_30chi.txt.\n",
+      "I(Zg<0, parabolic) stored\n",
+      "I(rot, e, Zg <> 0) stored\n",
+      "I(Zg<0, parabolic) stored\n",
+      "I(rot, e, Zg <> 0) stored\n",
+      "I(Zg<0, parabolic) stored\n",
+      "I(rot, e, Zg <> 0) stored\n",
+      "I(Zg<0, parabolic) stored\n",
+      "I(rot, e, Zg <> 0) stored\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/zzhang/Workspace/SpyDust/SpyDust/free_free.py:27: FutureWarning: The 'delim_whitespace' keyword in pd.read_csv is deprecated and will be removed in a future version. Use ``sep='\\s+'`` instead\n",
+      "  data = pd.read_csv(gff_data_file, delim_whitespace=True, comment=';', header=None, names=['gamma2', 'u', 'gff'])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gaunt factor stored\n"
+     ]
+    }
+   ],
    "source": [
     "import SpyDust.infrared as SpyIR\n",
     "import SpyDust.util as SpyUtil\n",
@@ -35,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,66 +146,66 @@
      "text": [
       "Benchmarking different grain sizes (fixed chi = 1.00e-05)\n",
       "======================================================================\n",
-      "a[ 0] = 3.70e-08 cm  -->  1.102 seconds\n",
-      "a[ 0] = 3.70e-08 cm  -->  1.102 seconds\n",
-      "a[ 1] = 4.14e-08 cm  -->  1.082 seconds\n",
-      "a[ 1] = 4.14e-08 cm  -->  1.082 seconds\n",
-      "a[ 2] = 4.63e-08 cm  -->  1.065 seconds\n",
-      "a[ 2] = 4.63e-08 cm  -->  1.065 seconds\n",
-      "a[ 3] = 5.18e-08 cm  -->  1.110 seconds\n",
-      "a[ 3] = 5.18e-08 cm  -->  1.110 seconds\n",
-      "a[ 4] = 5.79e-08 cm  -->  1.105 seconds\n",
-      "a[ 4] = 5.79e-08 cm  -->  1.105 seconds\n",
-      "a[ 5] = 6.47e-08 cm  -->  1.079 seconds\n",
-      "a[ 5] = 6.47e-08 cm  -->  1.079 seconds\n",
-      "a[ 6] = 7.24e-08 cm  -->  1.076 seconds\n",
-      "a[ 6] = 7.24e-08 cm  -->  1.076 seconds\n",
-      "a[ 7] = 8.09e-08 cm  -->  1.116 seconds\n",
-      "a[ 7] = 8.09e-08 cm  -->  1.116 seconds\n",
-      "a[ 8] = 9.05e-08 cm  -->  1.076 seconds\n",
-      "a[ 8] = 9.05e-08 cm  -->  1.076 seconds\n",
-      "a[ 9] = 1.01e-07 cm  -->  1.572 seconds\n",
-      "a[ 9] = 1.01e-07 cm  -->  1.572 seconds\n",
-      "a[10] = 1.13e-07 cm  -->  1.100 seconds\n",
-      "a[10] = 1.13e-07 cm  -->  1.100 seconds\n",
-      "a[11] = 1.27e-07 cm  -->  1.076 seconds\n",
-      "a[11] = 1.27e-07 cm  -->  1.076 seconds\n",
-      "a[12] = 1.41e-07 cm  -->  1.113 seconds\n",
-      "a[12] = 1.41e-07 cm  -->  1.113 seconds\n",
-      "a[13] = 1.58e-07 cm  -->  1.088 seconds\n",
-      "a[13] = 1.58e-07 cm  -->  1.088 seconds\n",
-      "a[14] = 1.77e-07 cm  -->  1.625 seconds\n",
-      "a[14] = 1.77e-07 cm  -->  1.625 seconds\n",
-      "a[15] = 1.98e-07 cm  -->  1.113 seconds\n",
-      "a[15] = 1.98e-07 cm  -->  1.113 seconds\n",
-      "a[16] = 2.21e-07 cm  -->  1.135 seconds\n",
-      "a[16] = 2.21e-07 cm  -->  1.135 seconds\n",
-      "a[17] = 2.47e-07 cm  -->  1.146 seconds\n",
-      "a[17] = 2.47e-07 cm  -->  1.146 seconds\n",
-      "a[18] = 2.77e-07 cm  -->  3.582 seconds\n",
-      "a[18] = 2.77e-07 cm  -->  3.582 seconds\n",
-      "a[19] = 3.09e-07 cm  -->  2.521 seconds\n",
-      "a[19] = 3.09e-07 cm  -->  2.521 seconds\n",
-      "a[20] = 3.46e-07 cm  -->  2.602 seconds\n",
-      "a[20] = 3.46e-07 cm  -->  2.602 seconds\n",
-      "a[21] = 3.87e-07 cm  -->  2.645 seconds\n",
-      "a[21] = 3.87e-07 cm  -->  2.645 seconds\n",
-      "a[22] = 4.33e-07 cm  -->  3.918 seconds\n",
-      "a[22] = 4.33e-07 cm  -->  3.918 seconds\n",
-      "a[23] = 4.84e-07 cm  -->  2.803 seconds\n",
-      "a[23] = 4.84e-07 cm  -->  2.803 seconds\n",
-      "a[24] = 5.41e-07 cm  -->  4.225 seconds\n",
-      "a[24] = 5.41e-07 cm  -->  4.225 seconds\n",
-      "a[25] = 6.05e-07 cm  -->  4.268 seconds\n",
-      "a[25] = 6.05e-07 cm  -->  4.268 seconds\n",
-      "a[26] = 6.76e-07 cm  -->  4.205 seconds\n",
-      "a[26] = 6.76e-07 cm  -->  4.205 seconds\n",
-      "a[27] = 7.56e-07 cm  -->  8.403 seconds\n",
-      "a[27] = 7.56e-07 cm  -->  8.403 seconds\n",
-      "a[28] = 8.46e-07 cm  -->  6.615 seconds\n",
-      "a[28] = 8.46e-07 cm  -->  6.615 seconds\n",
-      "a[29] = 9.46e-07 cm  -->  6.590 seconds\n",
-      "a[29] = 9.46e-07 cm  -->  6.590 seconds\n"
+      "a[ 0] = 3.70e-08 cm  -->  1.096 seconds\n",
+      "a[ 0] = 3.70e-08 cm  -->  1.096 seconds\n",
+      "a[ 1] = 4.14e-08 cm  -->  1.072 seconds\n",
+      "a[ 1] = 4.14e-08 cm  -->  1.072 seconds\n",
+      "a[ 2] = 4.63e-08 cm  -->  1.074 seconds\n",
+      "a[ 2] = 4.63e-08 cm  -->  1.074 seconds\n",
+      "a[ 3] = 5.18e-08 cm  -->  1.093 seconds\n",
+      "a[ 3] = 5.18e-08 cm  -->  1.093 seconds\n",
+      "a[ 4] = 5.79e-08 cm  -->  1.088 seconds\n",
+      "a[ 4] = 5.79e-08 cm  -->  1.088 seconds\n",
+      "a[ 5] = 6.47e-08 cm  -->  1.073 seconds\n",
+      "a[ 5] = 6.47e-08 cm  -->  1.073 seconds\n",
+      "a[ 6] = 7.24e-08 cm  -->  1.065 seconds\n",
+      "a[ 6] = 7.24e-08 cm  -->  1.065 seconds\n",
+      "a[ 7] = 8.09e-08 cm  -->  1.091 seconds\n",
+      "a[ 7] = 8.09e-08 cm  -->  1.091 seconds\n",
+      "a[ 8] = 9.05e-08 cm  -->  1.071 seconds\n",
+      "a[ 8] = 9.05e-08 cm  -->  1.071 seconds\n",
+      "a[ 9] = 1.01e-07 cm  -->  1.562 seconds\n",
+      "a[ 9] = 1.01e-07 cm  -->  1.562 seconds\n",
+      "a[10] = 1.13e-07 cm  -->  1.080 seconds\n",
+      "a[10] = 1.13e-07 cm  -->  1.080 seconds\n",
+      "a[11] = 1.27e-07 cm  -->  1.069 seconds\n",
+      "a[11] = 1.27e-07 cm  -->  1.069 seconds\n",
+      "a[12] = 1.41e-07 cm  -->  1.100 seconds\n",
+      "a[12] = 1.41e-07 cm  -->  1.100 seconds\n",
+      "a[13] = 1.58e-07 cm  -->  1.087 seconds\n",
+      "a[13] = 1.58e-07 cm  -->  1.087 seconds\n",
+      "a[14] = 1.77e-07 cm  -->  1.610 seconds\n",
+      "a[14] = 1.77e-07 cm  -->  1.610 seconds\n",
+      "a[15] = 1.98e-07 cm  -->  1.110 seconds\n",
+      "a[15] = 1.98e-07 cm  -->  1.110 seconds\n",
+      "a[16] = 2.21e-07 cm  -->  1.122 seconds\n",
+      "a[16] = 2.21e-07 cm  -->  1.122 seconds\n",
+      "a[17] = 2.47e-07 cm  -->  1.151 seconds\n",
+      "a[17] = 2.47e-07 cm  -->  1.151 seconds\n",
+      "a[18] = 2.77e-07 cm  -->  3.550 seconds\n",
+      "a[18] = 2.77e-07 cm  -->  3.550 seconds\n",
+      "a[19] = 3.09e-07 cm  -->  2.504 seconds\n",
+      "a[19] = 3.09e-07 cm  -->  2.504 seconds\n",
+      "a[20] = 3.46e-07 cm  -->  2.541 seconds\n",
+      "a[20] = 3.46e-07 cm  -->  2.541 seconds\n",
+      "a[21] = 3.87e-07 cm  -->  2.609 seconds\n",
+      "a[21] = 3.87e-07 cm  -->  2.609 seconds\n",
+      "a[22] = 4.33e-07 cm  -->  3.869 seconds\n",
+      "a[22] = 4.33e-07 cm  -->  3.869 seconds\n",
+      "a[23] = 4.84e-07 cm  -->  2.774 seconds\n",
+      "a[23] = 4.84e-07 cm  -->  2.774 seconds\n",
+      "a[24] = 5.41e-07 cm  -->  4.203 seconds\n",
+      "a[24] = 5.41e-07 cm  -->  4.203 seconds\n",
+      "a[25] = 6.05e-07 cm  -->  4.310 seconds\n",
+      "a[25] = 6.05e-07 cm  -->  4.310 seconds\n",
+      "a[26] = 6.76e-07 cm  -->  4.222 seconds\n",
+      "a[26] = 6.76e-07 cm  -->  4.222 seconds\n",
+      "a[27] = 7.56e-07 cm  -->  8.477 seconds\n",
+      "a[27] = 7.56e-07 cm  -->  8.477 seconds\n",
+      "a[28] = 8.46e-07 cm  -->  6.667 seconds\n",
+      "a[28] = 8.46e-07 cm  -->  6.667 seconds\n",
+      "a[29] = 9.46e-07 cm  -->  6.631 seconds\n",
+      "a[29] = 9.46e-07 cm  -->  6.631 seconds\n"
      ]
     }
    ],
@@ -179,6 +213,12 @@
     "# Benchmark for different grain sizes (fixed chi)\n",
     "# test_indices = [0, Na//4, Na//2, 3*Na//4, Na-1]  # Sample 5 grain sizes\n",
     "\n",
+    "\n",
+    "# Add an extra large grain size for testing\n",
+    "# a_tab_extended = np.append(a_tab, a_max*10)\n",
+    "# Na_extended = len(a_tab_extended)\n",
+    "\n",
+    "# test_indices = np.arange(Na_extended)  # Test all grain sizes including the extra large one\n",
     "test_indices = np.arange(Na)  # Test all grain sizes\n",
     "chi_fixed = chi_tab[0]  # Smallest chi value\n",
     "\n",
@@ -210,58 +250,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Largest Chi value "
+    "Sufficiently large grain size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Benchmarking different grain sizes (fixed chi = 3.16e+09)\n",
-      "======================================================================\n",
-      "a[ 0] = 3.70e-08 cm  -->  2.001 seconds\n",
-      "a[ 1] = 4.14e-08 cm  -->  1.989 seconds\n",
-      "a[ 2] = 4.63e-08 cm  -->  1.996 seconds\n",
-      "a[ 3] = 5.18e-08 cm  -->  1.996 seconds\n",
-      "a[ 4] = 5.79e-08 cm  -->  2.020 seconds\n",
-      "a[ 5] = 6.47e-08 cm  -->  2.000 seconds\n",
-      "a[ 6] = 7.24e-08 cm  -->  2.468 seconds\n",
-      "a[ 7] = 8.09e-08 cm  -->  2.470 seconds\n",
-      "a[ 8] = 9.05e-08 cm  -->  2.464 seconds\n",
-      "a[ 9] = 1.01e-07 cm  -->  4.047 seconds\n",
-      "a[10] = 1.13e-07 cm  -->  4.654 seconds\n",
-      "a[11] = 1.27e-07 cm  -->  5.714 seconds\n",
-      "a[12] = 1.41e-07 cm  -->  4.750 seconds\n",
-      "a[13] = 1.58e-07 cm  -->  6.379 seconds\n",
-      "a[14] = 1.77e-07 cm  -->  6.322 seconds\n",
-      "a[15] = 1.98e-07 cm  -->  9.425 seconds\n",
-      "a[16] = 2.21e-07 cm  -->  10.342 seconds\n",
-      "a[17] = 2.47e-07 cm  -->  10.423 seconds\n",
-      "a[18] = 2.77e-07 cm  -->  13.835 seconds\n",
-      "a[19] = 3.09e-07 cm  -->  12.744 seconds\n",
-      "a[20] = 3.46e-07 cm  -->  17.697 seconds\n",
-      "a[21] = 3.87e-07 cm  -->  19.712 seconds\n",
-      "a[22] = 4.33e-07 cm  -->  20.038 seconds\n",
-      "a[23] = 4.84e-07 cm  -->  28.698 seconds\n",
-      "a[24] = 5.41e-07 cm  -->  30.484 seconds\n",
-      "a[25] = 6.05e-07 cm  -->  35.585 seconds\n",
-      "a[26] = 6.76e-07 cm  -->  38.210 seconds\n",
-      "a[27] = 7.56e-07 cm  -->  44.931 seconds\n",
-      "a[28] = 8.46e-07 cm  -->  62.278 seconds\n",
-      "a[29] = 9.46e-07 cm  -->  75.256 seconds\n"
+      "a= 9.46e-06 cm  -->  1035.686 seconds\n"
      ]
     }
    ],
    "source": [
+    "start_time = time.time()\n",
+    "with suppress_stdout():\n",
+    "    result = SpyIR.Benchmark_compute_FGIR_integrals(np.array([a_tab[-1]*10]), np.array([chi_fixed]))\n",
+    "end_time = time.time()\n",
+    "\n",
+    "elapsed = end_time - start_time\n",
+    "\n",
+    "print(f\"a= {a_tab[-1]*10:.2e} cm  -->  {elapsed:.3f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Largest Chi value "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Benchmark for different grain sizes (fixed chi)\n",
     "# test_indices = [0, Na//4, Na//2, 3*Na//4, Na-1]  # Sample 5 grain sizes\n",
     "\n",
-    "test_indices = np.arange(Na)  # Test all grain sizes\n",
+    "# Add an extra large grain size for testing\n",
+    "a_tab_extended = np.append(a_tab, a_max*20)\n",
+    "Na_extended = len(a_tab_extended)\n",
+    "\n",
+    "test_indices = np.arange(Na_extended)  # Test all grain sizes including the extra large one\n",
     "chi_fixed = chi_tab[-1]  # Large chi value\n",
     "\n",
     "timing_results_a_largeChi = []\n",
@@ -270,7 +306,7 @@
     "print(\"=\"*70)\n",
     "\n",
     "for idx in test_indices:\n",
-    "    a_test = a_tab[idx]\n",
+    "    a_test = a_tab_extended[idx]\n",
     "    \n",
     "    start_time = time.time()\n",
     "    with suppress_stdout():\n",
@@ -285,12 +321,28 @@
     "        'time': elapsed\n",
     "    })\n",
     "    \n",
-    "    print(f\"a[{idx:2d}] = {a_test:.2e} cm  -->  {elapsed:.3f} seconds\")\n"
+    "    print(f\"a[{idx:2d}] = {a_test:.2e} cm  -->  {elapsed:.3f} seconds\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_time = time.time()\n",
+    "with suppress_stdout():\n",
+    "    result = SpyIR.Benchmark_compute_FGIR_integrals(np.array([a_tab[-1]*10]), np.array([chi_fixed]))\n",
+    "end_time = time.time()\n",
+    "\n",
+    "elapsed = end_time - start_time\n",
+    "\n",
+    "print(f\"a= {a_tab[-1]*10:.2e} cm  -->  {elapsed:.3f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +367,7 @@
     "plt.yscale('log')\n",
     "plt.xlabel('Grain Size a (cm)')\n",
     "plt.ylabel('Computation Time (seconds)')\n",
-    "plt.title('Computation Time vs Grain Size (Fixed Chi - Smallest Chi)')\n",
+    "plt.title('Computation Time vs Grain Size (Fixed $Chi$ - Smallest $Chi$)')\n",
     "plt.grid(True, which=\"both\", ls=\"--\")\n",
     "plt.savefig(\"benchmark_infrared_different_sizes.pdf\", dpi=300)\n",
     "plt.show()"
